@@ -1,0 +1,88 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+  "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+  <title>Index</title>
+  <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+  <style type="text/css">
+  <!--
+    body {
+      font-family: Verdana,Helvetica,Arial,sans-serif;
+      font-size: small;
+    }
+    code,pre {
+      font-family: "Courier New",Courier,monospace;
+      font-size: 1em;
+    }
+    h3 {
+      padding: 2px;
+      border-left: 4px solid #FFCC00;
+      border-bottom: 1px solid #FFCC00;
+    }
+    h4 {
+      padding: 2px;
+      border-left: 8px solid #FF9933;
+      border-bottom: 1px solid #FF9933;
+    }
+    h5 {
+      font-size: small;
+    }
+    pre {
+      margin-left: 25px;
+      margin-right: 25px;
+      padding: 5px;
+      background-color: #EEEEEE;
+      border: 1px solid black;
+    }
+    p.note {
+      padding: 5px;
+      background-color: #DDDDFF;
+      border: 1px solid blue;
+    }
+    acronym {
+      cursor: help;
+      border-bottom: 1px dotted black;
+    }
+  -->
+  </style>
+</head>
+<body>
+<h2>WinMerge Documentation</h2>
+
+<p>This folder contains WinMerge's developer-documentation.</p>
+
+<h3>Developer Documentation</h3>
+<p>Developer documentation is in meant for people who want to compile WinMerge
+themselves, want to know how things work in WinMerge and possibly help with
+WinMerge development.
+</p>
+
+<p><b>Important files:</b>
+<ul>
+  <li><a href="readme-developers.html">ReadMe for developers</a> is old "main"
+    document. Contains still lots and lots of useful information.</li>
+  <li><a href="readme-Subversion.html">Subversion info</a> tells how to use
+    subversion for version control, most importantly how to get latest
+	sources.</li>
+  <li><a href="Translations.html">Translation instructions</a></li>
+  <li><a href="readme-manual.html">User manual information</a> tells how to
+    convert manual from DocBook to HTML and HTML help.</li>
+  <li><a href="Options.html">Options</a> explains WinMerge's options
+    handling.</li>
+  <li><a href="Plugins.html">Plugins</a> contains documentation about plugins-
+    system.</li>
+  <li><a href="readme-developers-Merge7zInstaller.html">Merge7zInstaller</a>
+    documents archive support installer.</li>
+  <li><a href="readme-InnoSetup.html">InnoSetup</a> contains documentation
+    about WinMerge's installer.</li>
+  <li><a href="SVN_Organisation.txt">SVN Organization</a> explains SVN
+    folders.</li>
+</ul></p>
+
+<p class="note">Lots of developer information is in our
+<a href="http://wiki.winmerge.org/">development wiki</a>. Information in the
+wiki is usually more up-to-date and more frequently updated than documentation
+in source tree.</p>
+
+</body>
+</html>
