@@ -1,0 +1,82 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+  "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+  <title>Index</title>
+  <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+  <style type="text/css">
+  <!--
+    body {
+      font-family: Verdana,Helvetica,Arial,sans-serif;
+      font-size: small;
+    }
+    code,pre {
+      font-family: "Courier New",Courier,monospace;
+      font-size: 1em;
+    }
+    h3 {
+      padding: 2px;
+      border-left: 4px solid #FFCC00;
+      border-bottom: 1px solid #FFCC00;
+    }
+    h4 {
+      padding: 2px;
+      border-left: 8px solid #FF9933;
+      border-bottom: 1px solid #FF9933;
+    }
+    h5 {
+      font-size: small;
+    }
+    pre {
+      margin-left: 25px;
+      margin-right: 25px;
+      padding: 5px;
+      background-color: #EEEEEE;
+      border: 1px solid black;
+    }
+    p.note {
+      padding: 5px;
+      background-color: #DDDDFF;
+      border: 1px solid blue;
+    }
+    acronym {
+      cursor: help;
+      border-bottom: 1px dotted black;
+    }
+  -->
+  </style>
+</head>
+<body>
+<h2>WinMerge User Documentation</h2>
+
+<p>This folder contains WinMerge's user- documentation.</p>
+
+<h3>User Documentation</h3>
+<p>These documents are meant for casual users. They help users with WinMerge
+use, tell about changes in WinMerge versions. Some files are included in the
+installer, but not all. More files are included in binary distribution, but not
+all files there either.
+</p>
+
+<p><b>User's Manual:</b><br>
+User's manual is not directly readable from our source tree. It must be first
+converted to HTML or HTML help. See <a href="../Developers">Developer-documentation</a>
+for instructions how to do it.
+
+<p><b>Other files in user documentation:</b>
+<ul>
+  <li><a href="ReadMe.txt">ReadMe</a> is shown in end of the installer and is
+    installed into Windows Start-menu also. It lists most important links for
+	help, installing archive support etc.</li>
+  <li><a href="ChangeLog.txt">ChangeLog</a> contains general list of changes
+    between WinMerge versions.</li>
+  <li><a href="ReleaseNotes.html">ReleaseNotes</a> has release-specific
+    information, like known issues.</li>
+  <li><a href="Contributors.txt">Contributors list</a> lists people in
+    development group and other people who have helped in development.</li>
+  <li><a href="Files.txt">Files list</a> lists files WinMerge installs.</li>
+  <li><a href="GPL.rtf">GPL.rtf</a> contains GPL license in RTF format.</li>
+</ul></p>
+
+</body>
+</html>
