@@ -1,0 +1,86 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+  "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+  <title>Index</title>
+  <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+  <style type="text/css">
+  <!--
+    body {
+      font-family: Verdana,Helvetica,Arial,sans-serif;
+      font-size: small;
+    }
+    code,pre {
+      font-family: "Courier New",Courier,monospace;
+      font-size: 1em;
+    }
+    h3 {
+      padding: 2px;
+      border-left: 4px solid #FFCC00;
+      border-bottom: 1px solid #FFCC00;
+    }
+    h4 {
+      padding: 2px;
+      border-left: 8px solid #FF9933;
+      border-bottom: 1px solid #FF9933;
+    }
+    h5 {
+      font-size: small;
+    }
+    pre {
+      margin-left: 25px;
+      margin-right: 25px;
+      padding: 5px;
+      background-color: #EEEEEE;
+      border: 1px solid black;
+    }
+    p.note {
+      padding: 5px;
+      background-color: #DDDDFF;
+      border: 1px solid blue;
+    }
+    acronym {
+      cursor: help;
+      border-bottom: 1px dotted black;
+    }
+  -->
+  </style>
+</head>
+<body>
+<h2>WinMerge Documentation</h2>
+
+<p>This folder contains WinMerge's user- and developer-documentation.</p>
+
+<h3>User Documentation</h3>
+<p>User documentation is in <code><a href="Users/">Users</a>-subfolder</code>.
+</p>
+
+<p><b>Important files in user documentation:</b>
+<ul>
+  <li><a href="Users/ReadMe.txt">ReadMe</a></li>
+  <li><a href="Users/ChangeLog.txt">ChangeLog</a></li>
+  <li><a href="Users/ReleaseNotes.html">ReleaseNotes</a></li>
+  <li><a href="Users/Manual/">User manual in own folder</a> note that it is
+    XML files and needs to be processed into html files.</li>
+</ul></p>
+
+<h3>Developer Documentation</h3>
+<p>Developer documentation is in <code><a href="Develoepers/">Developers</a>-subfolder</code>.
+</p>
+
+<p><b>Important files in user documentation:</b>
+<ul>
+  <li><a href="Developers/readme-developers.html">ReadMe for developers</a>
+    contains lots of development-related information.</li>
+  <li><a href="Developers/readme-Subversion.html">Subversion info</a></li>
+  <li><a href="Developers/Translations.html">Translation instructions</a></li>
+  <li><a href="Developers/readme-manual.html">User manual information</a></li>
+</ul></p>
+
+<p class="note">Lots of developer information is in our
+<a href="http://wiki.winmerge.org/">development wiki</a>. Information in the
+wiki is usually more up-to-date and more frequently updated than documentation
+in source tree.</p>
+
+</body>
+</html>
