@@ -9,7 +9,8 @@ WinMerge 2.7.7.2
   Horizontal scrolling with Shift + MouseWheel (#1865795)
   Installer: Add support for integration with latest version of TortoiseCVS and
     TortoiseSVN x64 (#1865168)
-  Close file compare tab with middle mouse button (#1865220)
+  Close compare tab with middle mouse button (#1865220)
+  Add index.html for documentation folders (#1866183)
   BugFix: Crash when using TrackPoint middle-button scrolling (#1864040)
   BugFix: WinMerge didn't show the contents of the symbolic link target (#1864978)
   BugFix: Unused registry key HKCU\Thingamahoochie\WinMerge was created 
